deps/crates/vendor/pin-project-lite/tests/ui/pinned_drop/call-drop-inner.stderr
error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> tests/ui/pinned_drop/call-drop-inner.rs:12:13
   |
12 |             __drop_inner(this);
   |             ^^^^^^^^^^^^ ---- unexpected argument of type `Pin<&mut S>`
   |
note: function defined here
  --> tests/ui/pinned_drop/call-drop-inner.rs:5:1
   |
 5 | / pin_project! {
 6 | |     pub struct S {
 7 | |         #[pin]
 8 | |         field: u8,
...  |
15 | | }
   | |_^
   = note: this error originates in the macro `$crate::__pin_project_make_drop_impl` which comes from the expansion of the macro `pin_project` (in Nightly builds, run with -Z macro-backtrace for more info)
help: remove the extra argument
   |
12 -             __drop_inner(this);
12 +             __drop_inner();
   |
